added speed meassurement and fine logs
